[tool.poetry]
name = "magic-lamp"
version = "0.4.1"
description = "Easily integrate LLMs into Python code."
license = "MIT"
authors = ["Varun Ramesh <varunramesh@live.com>"]
readme = "README.md"
repository = "https://github.com/rameshvarun/magic-lamp"

[tool.poetry.dependencies]
python = "^3.9"
llama-cpp-python = "^0.2.85"
huggingface-hub = "^0.24.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
